Fix broken CSS and views

--- a/client/src/styles/components/_about.scss
+++ b/client/src/styles/components/_about.scss
@@ -69,7 +69,6 @@
 			}
 			padding-top: 50px;
 			width: 100%;
-<<<<<<< HEAD
 			.about-image {
 				width: 100%;
 				img {
@@ -79,14 +78,6 @@
 					max-width: 1500px;
 					width: 100%;
 				}
-=======
-
-			img {
-				@media (max-width: 750px) {
-					height: 150px;
-				}
-				height: 650px;
->>>>>>> 2e0176bc3109a90314fc611119ad17b945f8e595
 			}
 		}
 	}
