--- a/client/src/styles/components/_index.scss
+++ b/client/src/styles/components/_index.scss
@@ -1,18 +1,4 @@
 .index-container {
-<<<<<<< HEAD
-	// @media (max-width: 750px) {
-	// 	background-size: 125%;
-	// }
-	//
-	// @media (min-width: 750px) {
-	// 	background-size: 100%;
-	// }
-=======
-	@media (max-width: 750px) {
-		background-size: 125%;
-	}
->>>>>>> 2e0176bc3109a90314fc611119ad17b945f8e595
-
 	height: 1000px;
 	max-width: 2000px;
 	width: 100%;
